<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lublin Quest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="glowny_tytul">Lublin Quest</string>
    <string name="etykieta_zaloguj">Zaloguj</string>
    <string name="etykieta_zarejestruj">Zarejestruj</string>
	<string name="zaloguj_hint">Login</string>
    <string name="haslo_hint">Hasło</string>
     <string name="etykieta_najlepsze_wyniki">Najlepsze wyniki</string>
    <string name="etykieta_wyswietl_osiagniecia">Osiągnięcia</string>
	<string name="etykieta_pobierz_zadanie">Pobierz zadanie</string>
	<string name="etykieta_zadania_innych">Wyświetl pomysły innych użytkowników</string>
    <string name="lista_zadan_tytul">Aktualna lista zadań:</string>
    <string name="punkty_tytul">Punkty: 0</string>
    <string name="etykieta_zobacz_mape">Zobacz mapę zadania</string>
    <string name="osiagniecie1_tytul">Dobry początek</string>
	<string name="osiagniecie1_opis">Wykonaj swoje pierwsze zadanie</string>
	<string name="osiagniecie2_tytul">Każdy głos się liczy</string>
	<string name="osiagniecie2_opis">Zagłosuj na pomysł innej osoby</string>
    <string name="osiagniecie3_tytul">I ty możesz mieć wpływ</string>
	<string name="osiagniecie3_opis">Umieść swój pomysł na rozwój miasta</string>
	<string name="osiagniecie4_tytul">W kupie siła</string>
	<string name="osiagniecie4_opis">Zdobądź przynajmniej 10 głosów dodanych na swój pomysł</string>
	<string name="osiagniecie5_tytul">Zgaduj-zgadula</string>
	<string name="osiagniecie5_opis">Rozwiąż hasło z zadania pierwszego przy odkrytych maksymalnie 2 literach</string>
	
	<string name="etykieta_zglos_wykonanie">Zsynchronizuj miejsce</string>
	
	<string name="lista_pomyslow_tytul">Pomysły na rozwój miasta zgłoszone przez innych</string>
	<string name="etykieta_dodaj_pomysl">Dodaj nowy pomysł</string>
	
	<string name="etykieta_popieram">Popieram</string>
	<string name="etykieta_nie_popieram">Nie popieram</string>
	
	<string name="tytul_pomyslu_hint">Tytuł pomysłu</string>
	<string name="opis_pomyslu_hint">Opis pomysłu</string>
	<string name="etykieta_dodaj_pomysl2">Dodaj pomysł</string>
	
	<string name="rejestracja_tytul">Rejestracja</string>
	
	 <string name="post_idea">Dodaj pomysł</string>
	 <string name="read_idea_title">Ostatnie pomysły</string>
	  <string name="read_scores_title">Najlepsze wyniki</string>
	 <string name="zadanie1_hint">Wpisz hasło</string>
</resources>
