<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/tlo"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:padding="30dip"
    tools:context="com.projekty.gamifikacjalublin.MainActivity" 
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/glowny_tytul"
        android:textSize="38sp" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="35dip" android:text=""/>

	  <LinearLayout
	     android:orientation="vertical"
	     android:layout_height="wrap_content"
	     android:layout_width="match_parent"
	     android:layout_gravity="center">

	    <EditText
	        android:id="@+id/pole_login"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/zaloguj_hint"
	        android:inputType="text" />

	    <EditText
	        android:id="@+id/pole_haslo"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/haslo_hint"
	        android:inputType="textPassword" />
  </LinearLayout>
  <Space
  android:layout_width="1dp"
  android:layout_height="20dp"/>
  <LinearLayout
	     android:orientation="vertical"
	     android:layout_height="wrap_content"
	     android:layout_width="match_parent"
	     android:layout_gravity="center|bottom">

      <Button
          android:id="@+id/przycisk_zaloguj"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/etykieta_zaloguj" />
	<View android:layout_height="0dip" 
          android:layout_width="fill_parent"
          android:layout_weight="1" />
      <Button
          android:id="@+id/przycisk_zarejestruj"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/etykieta_zarejestruj" />
	  
  </LinearLayout>
</LinearLayout>
