<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="#fff"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_gradient" >

        <Button
            android:id="@+id/przycisk_wyswietl_osiagniecia"
            style="@style/WhiteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/black_button"
            android:text="@string/etykieta_wyswietl_osiagniecia" />

        <TextView
            android:id="@+id/punkty_tytul"
            style="@style/BlackText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/punkty_tytul"
            android:textAppearance="?android:attr/textAppearanceLarge" />

       
    </LinearLayout>
 <Space
  android:layout_width="1dp"
  android:layout_height="40dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lista_zadan_tytul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BlackText"
            android:gravity="center"
            android:text="@string/lista_zadan_tytul"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
<Space
  android:layout_width="1dp"
  android:layout_height="20dp"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_layover"
        android:layout_below="@+id/top_layover"
        android:background="#fff"
        android:divider="@android:color/transparent"
        android:scrollbars="none" />

<View android:layout_height="0dip" 
          android:layout_width="fill_parent"
          android:layout_weight="1" />
	<Button
            android:id="@+id/przycisk_pobierz_zadanie"
            android:layout_width="match_parent"
             android:layout_height="wrap_content"
            android:background="@drawable/black_button"
            style="@style/WhiteText"
            android:text="@string/etykieta_pobierz_zadanie" />

    <Button
        android:id="@+id/przycisk_zadania_innych"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_button"
        style="@style/WhiteText"
         android:text="@string/etykieta_zadania_innych"/>
    
      <Button
        android:id="@+id/przycisk_najlepsze_wyniki"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_button"
        style="@style/WhiteText"
         android:text="@string/etykieta_najlepsze_wyniki"/>
     

</LinearLayout>