<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
     android:background="@color/tlo"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/tytul_pomyslu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/tytul_pomyslu_hint"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<Space
  android:layout_width="1dp"
  android:layout_height="80dp"/>
<ScrollView
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="300dip">
    <EditText
        android:id="@+id/opis_pomyslu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/opis_pomyslu_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
   </ScrollView>
<View android:layout_height="0dip" 
          android:layout_width="fill_parent"
          android:layout_weight="1" />
    <Button
        android:id="@+id/przycisk_dodaj_pomysl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etykieta_dodaj_pomysl2" />

</LinearLayout>