<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/tlo"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
     android:fillViewport="true">

    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/etykieta_wyswietl_osiagniecia"
            android:textAppearance="?android:attr/textAppearanceLarge" />
 <Space
  android:layout_width="1dp"
  android:layout_height="40dp"/>

 <TableLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >

     <TableRow
         android:id="@+id/tableRow1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
	 <LinearLayout
	           android:layout_width="match_parent"
	           android:layout_height="match_parent"
	           android:orientation="horizontal" >

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="left"
             android:orientation="vertical" >

             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="245dp"
                 android:layout_height="wrap_content"
                 android:text="@string/osiagniecie1_tytul"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
				 <Space
				  android:layout_width="1dp"
				  android:layout_height="10dp"/>
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/osiagniecie1_opis"
                 android:textAppearance="?android:attr/textAppearanceSmall" />

         </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:orientation="vertical" >

         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="right"
             android:src="@drawable/nieaktywny_achievment" />
    </LinearLayout>      
    </LinearLayout>   
     </TableRow>
 <Space
  android:layout_width="1dp"
  android:layout_height="20dp"/>
   <TableRow
         android:id="@+id/tableRow2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
	 <LinearLayout
	           android:layout_width="match_parent"
	           android:layout_height="match_parent"
	           android:orientation="horizontal" >

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="left"
             android:orientation="vertical" >

             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="245dp"
                 android:layout_height="wrap_content"
                 android:text="@string/osiagniecie2_tytul"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
				 <Space
				  android:layout_width="1dp"
				  android:layout_height="10dp"/>
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/osiagniecie2_opis"
                 android:textAppearance="?android:attr/textAppearanceSmall" />

         </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:orientation="vertical" >

         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="right"
             android:src="@drawable/nieaktywny_achievment" />
    </LinearLayout>      
    </LinearLayout>   
     </TableRow>
     
 <Space
  android:layout_width="1dp"
  android:layout_height="20dp"/>
    <TableRow
         android:id="@+id/tableRow3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
	 <LinearLayout
	           android:layout_width="match_parent"
	           android:layout_height="match_parent"
	           android:orientation="horizontal" >

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="left"
             android:orientation="vertical" >

             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="245dp"
                 android:layout_height="wrap_content"
                 android:text="@string/osiagniecie3_tytul"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
				 <Space
				  android:layout_width="1dp"
				  android:layout_height="10dp"/>
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/osiagniecie3_opis"
                 android:textAppearance="?android:attr/textAppearanceSmall" />

         </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:orientation="vertical" >

         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="right"
             android:src="@drawable/nieaktywny_achievment" />
    </LinearLayout>      
    </LinearLayout>   
     </TableRow>
 <Space
  android:layout_width="1dp"
  android:layout_height="20dp"/>
    <TableRow
         android:id="@+id/tableRow4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
	 <LinearLayout
	           android:layout_width="match_parent"
	           android:layout_height="match_parent"
	           android:orientation="horizontal" >

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="left"
             android:orientation="vertical" >

             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="245dp"
                 android:layout_height="wrap_content"
                 android:text="@string/osiagniecie4_tytul"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
				 <Space
				  android:layout_width="1dp"
				  android:layout_height="10dp"/>
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/osiagniecie4_opis"
                 android:textAppearance="?android:attr/textAppearanceSmall" />

         </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:orientation="vertical" >

         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="right"
             android:src="@drawable/nieaktywny_achievment" />
    </LinearLayout>      
    </LinearLayout>   
     </TableRow>
     
      <Space
  android:layout_width="1dp"
  android:layout_height="20dp"/>
   <TableRow
         android:id="@+id/tableRow5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
	 <LinearLayout
	           android:layout_width="match_parent"
	           android:layout_height="match_parent"
	           android:orientation="horizontal" >

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="left"
             android:orientation="vertical" >

             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="245dp"
                 android:layout_height="wrap_content"
                 android:text="@string/osiagniecie5_tytul"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
				 <Space
				  android:layout_width="1dp"
				  android:layout_height="10dp"/>
             <TextView
                 android:id="@+id/textView11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/osiagniecie5_opis"
                 android:textAppearance="?android:attr/textAppearanceSmall" />

         </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:orientation="vertical" >

         <ImageView
             android:id="@+id/imageView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="right"
             android:src="@drawable/nieaktywny_achievment" />
    </LinearLayout>      
    </LinearLayout>   
     </TableRow>
 </TableLayout>
     
 
            
    </LinearLayout>
     </ScrollView>